--- a/css/index.css
+++ b/css/index.css
@@ -36,8 +36,7 @@ footer, header, hgroup, menu, nav, section {
     font-size: 100%;
     margin: 0;
     max-width: 100%;
-        border: 1px solid grey;
-
+        
 }
 html{
     font-size: 62.5%;
@@ -46,11 +45,12 @@ body{
     font-size: 1.8rem;
     line-height: 1.5;
     color: #4f4f4f;
+    background-color: #FBFFFB;
     font-family: 'Source Sans Pro', sans-serif;
 
 }
 h1{
-    color: white;
+    color:#FBFFFB;
     font-size: 6rem;
     font-family: 'Oxygen', sans-serif;
 
@@ -59,11 +59,15 @@ h2{
 font-size: 3rem;
 }
 h3{
-    font-size: 3.3rem;
+    font-size: 2.2rem;
 
 }
 h2 h3{
     color: #266035;
+    text-align: center;
+    font-family: 'Oxygen', sans-serif;
+margin-bottom: 5%;
+    
 }
 a{
     text-decoration: none;
@@ -74,6 +78,8 @@ a{
 button{
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 1.8rem;
+    padding:2% 4%;
+    margin-top: 4%;
 }
 section, footer{
     padding: 4% 0;
@@ -84,13 +90,13 @@ section, footer{
     background-position: center;
 }
 nav{
-    display: flex;
-    padding: 2% 0;
-    position: fixed;
-    width: 100%;
-top: 0;
-z-index: 999;
-background-color: rgdb(255, 255, 255, 0.8);
+    display:flex;
+    justify-content: space-between;
+    position:fixed;
+    width:100%;
+    top:0;
+    z-index: 999; /*everything should scroll behind this*/
+    background-color:rgba(255, 255, 255, 0.8);
 }
 .logo{
     width:5%;
@@ -104,7 +110,7 @@ background-color: rgdb(255, 255, 255, 0.8);
 }
 #top{
     height: 90vh;
-    background-image: url('../image/header.jpg');
+    background-image: url('../images/header.jpg');
     background-position: bottom;
     display:flex;
     justify-content: center;
@@ -120,7 +126,7 @@ background-color: rgdb(255, 255, 255, 0.8);
         background-color: #fff;
         transition: 2s;
 }
-#top button hover{
+#top button:hover{
     color: #fff;
     background-color: #266035;
     border:2px solid #fff;
@@ -135,8 +141,12 @@ background-color: rgdb(255, 255, 255, 0.8);
 }
 #about div{
     width:20%;
-    margin-right:15%;
+    margin-right:10%;
 }
+#shop{
+    padding-bottom: 0;
+}
+
 .container{
     display: flex;
     flex-wrap: wrap;
@@ -164,4 +174,47 @@ background-color: rgdb(255, 255, 255, 0.8);
 .text button:hover{
 background-color: #fff;
 color:#266035
+}
+.succulants{
+    background-image:url('../images/succulants.jpg');
+}
+.cacti{
+    background-image:url('../images/cacti.jpg');
+}
+.tropicals{
+    background-image:url('../images/tropicals.jpg');
+}
+footer{
+    background-color: #266035;
+    display: flex;
+    flex-wrap: wrap;
+    color:#fff;
+}
+footer h2{
+    color: #fff;
+    width:100%;
+    text-align: center;
+
+}
+footer a, footer h3{
+color: #fff;
+text-align: left;
+}
+.right, .left{
+    width:50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.right img{
+    width:60%;
+}
+.bottom {
+    width:100%;
+    text-align: right;
+
+}
+.bottom p{
+    margin-right: 5%;
+    margin-top:2%;
 }
